5th images, render image in to the canvas

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <script src="js/main.js"></script>
     <script src="js/util.js"></script>
+    <script src="js/images.js"></script>
 </body>
 
 </html>
