--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </section>
 
     <div class="properties">
-        <input type="text" id="memetext" onchange="onChangedText(this.value)">
+        <input type="text" id="memetext" onchange="onChangedText(this.value)" placeholder="Text for your meme">
         <button class="decrease-font" onclick="changeFontSize('minus')">-</button>
         <button class="increase-font" onclick="changeFontSize('plus')">+ </button>
         <input type="color" id="color" onchange="setColor(this.value)" />
