--- a/index.html
+++ b/index.html
@@ -5,28 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/style.css">
     <title>Incredible Meme Generator</title>
 </head>
 
 <body onload="init()">
     <input type="text" class="search-bar" placeholder="Enter text to search our memes">
-
+<main class="main-container container">
     <section class="images-library">
         <!-- <img src="" alt="memeimage">    to render from js -->
     </section>
 
-    <div class="properties">
+    <div class="properties flex">
         <input type="text" id="memetext" onchange="onChangedText(this.value)" placeholder="Text for your meme">
-        <button class="decrease-font" onclick="changeFontSize('minus')">-</button>
-        <button class="increase-font" onclick="changeFontSize('plus')">+ </button>
+        <button class="decrease-font btn btn-light" onclick="changeFontSize('minus')">-</button>
+        <button class="increase-font btn btn-light" onclick="changeFontSize('plus')">+ </button>
         <input type="color" id="color" onchange="setColor(this.value)" />
-        <button> <a onclick="saveCanvas(this)">Save</a></button>
-        <button class="shadow-text" onclick="onClickShadow()">S</button>
+        <button class="btn btn-light" > <a onclick="saveCanvas(this)">Save</a></button>
+        <button class="shadow-text btn btn-light" onclick="onClickShadow()">S</button>
 
     </div>
 
-    <canvas class="canvas" id="canvas" width="500" height="400"></canvas>
+    <canvas class="canvas center" id="canvas" width="500" height="400"></canvas>
+</main>
+
+<footer class="page-footer font-small blue footer-copyright text-center py-3"> This meme generator was created by Anat Zimmerman and Eden Nievenhois</footer>
 
     <script src="js/main.js"></script>
     <script src="js/util.js"></script>
