--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 </head>
 
 <body onload="init()">
-    <input type="text" class="search-bar" placeholder="Enter text to search our memes">
-
+            <table id="img-table">
+                <img class="img" src="img/meme1.jpg" onclick="onclickImg(this, 1)">
+                <img class="img" src="img/meme2.jpg" onclick="onclickImg(this, 2)">
+                <img class="img" src="img/meme3.jpg" onclick="onclickImg(this, 3)">
+            </table>
+            <input type="text" class="search-bar" placeholder="Enter text to search our memes">
     <section class="images-library">
         <!-- <img src="" alt="memeimage">    to render from js -->
     </section>
