12th commit show selected img on canvas

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 </head>
 
 <body onload="init()">
-            <table id="img-table">
-                <img class="img" src="img/meme1.jpg" onclick="onclickImg(this, 1)">
-                <img class="img" src="img/meme2.jpg" onclick="onclickImg(this, 2)">
-                <img class="img" src="img/meme3.jpg" onclick="onclickImg(this, 3)">
-            </table>
+    
+   
+
     <input type="text" class="search-bar" placeholder="Enter text to search our memes">
 <main class="main-container container">
     <section class="images-library">
-        <!-- <img src="" alt="memeimage">    to render from js -->
+       <ul class="images-cards">
+
+    </ul>
     </section>
 
     <div class="properties flex">
@@ -39,7 +39,7 @@
 
     <script src="js/main.js"></script>
     <script src="js/util.js"></script>
-    <script src="js/images.js"></script>
+    <script src="js/util-images.js"></script>
 </body>
 
 </html>
