added shadow function

--- a/index.html
+++ b/index.html
@@ -18,7 +18,34 @@
     </section>    
    
 
-    <input type="text" class="search-bar" placeholder="Enter text to search our memes">
+    <input type="text" id="myInput" onkeyup="myFunction" placeholder="Enter text to search our memes">
+    <ul id="myUL">
+        <li><a href="#">Dancing</a></li>
+        <li><a href="#">Trump</a></li>
+        <li><a href="#">Cute Doggies</a></li>
+        <li><a href="#">Baby and dog sleeping</a></li>
+        <li><a href="#">Punch Baby</a></li>
+        <li><a href="#">Cat sleeping on keyboard</a></li>
+        <li><a href="#">Toy Story</a></li>
+        <li><a href="#">I know you are full of shit</a></li>
+        <li><a href="#">Sneaky Baby</a></li>
+        <li><a href="#">Putin</a></li>
+        <li><a href="#">StarTrek</a></li>
+        <li><a href="#">Haim hecht</a></li>
+        <li><a href="#">Ned Stark</a></li>
+        <li><a href="#">Leonardo Dicaprio</a></li>
+        <li><a href="#">Ancient Alliens</a></li>
+        <li><a href="#">Dr Evil</a></li>
+        <li><a href="#">African kids dancing</a></li>
+        <li><a href="#">Trump </a></li>
+        <li><a href="#">What are you doing?</a></li>
+        <li><a href="#">Supprised Baby</a></li>
+        <li><a href="#">Chiwawa</a></li>
+        <li><a href="#">Obama</a></li>
+        <li><a href="#">Kissing basketball players</a></li>
+        <li><a href="#">Ophra</a></li>
+
+      </ul>
 <main class="main-container container">
     <section class="images-library">
        <ul class="images-cards">
@@ -33,7 +60,7 @@
         <button class="increase-font btn btn-light" onclick="changeFontSize('plus')">+ </button>
         <input type="color" id="color" onchange="setColor(this.value)" />
         <button class="btn btn-light" > <a onclick="saveCanvas(this)">Save</a></button>
-        <button class="shadow-text btn btn-light" onclick="onClickShadow()">S</button>
+        <button class="shadow-text btn btn-light" onclick="makeShadow()">S</button>
 
     </div>
 
